# indoor-stockpile-drone

./: .env.example  .gitattributes  .gitignore  .gitmodules  Claude.md  README.md  Skill.md  docker-compose.opensfm.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  run_example_reconstruction.py
backend/src/api/: main.py
backend/src/api/routes/: datasets.py  segment.py  sim.py  volume.py
backend/src/core/: config.py  jobs.py  logging.py
backend/src/reconstruction/: dataset_utils.py  ml_segmentation.py  opensfm_runner.py  overlay.py  pipeline.py  segment_worker.py  segmentation.py  volume_compute.py  volume_worker.py
backend/src/sim/: orbit_capture.py  sitl_runner.py
backend/tests/: test_api.py  test_dataset_utils.py  test_datasets_api.py  test_jobs.py  test_ml_segmentation.py  test_segment_routes.py  test_volume_compute.py
data/opensfm_project/: config.yaml
scripts/: check.ps1  datasets.tsv  dev-backend.ps1  dev-web.ps1  setup-data.ps1  setup-data.sh
tools/: download_refs.py
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  progress.ts
web/src/components/: DatasetSelector.tsx  Lightbox.tsx  OrbitPlot.tsx  ReconstructionViewer.tsx  SegmentationPanel.tsx  SimulationPanel.tsx  VolumePanel.tsx
