[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indoor-stockpile-drone-backend"
version = "0.1.0"
description = "Simulated GPS-denied drone flights, photogrammetry and stockpile volume estimation (prototype)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "mavsdk>=2.0",
    "open3d>=0.19",
    # open3d 0.19+ supports numpy 2; the OpenSfM-enabled image runs 2.x.
    "numpy>=1.26",
    "pillow>=10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
# ML segmentation (YOLOE open-vocabulary instance segmentation). Optional:
# without it the "ml" segmentation mode returns a clean install-hint error.
# ultralytics pulls in torch/torchvision — on Linux/Docker install the CPU
# wheels first (see backend/Dockerfile) to avoid the multi-GB CUDA build.
ml = [
    "ultralytics>=8.3.100",
    # Text encoder used by YOLOE text prompts; without it ultralytics
    # pip-installs the same package at runtime on first use.
    "clip @ git+https://github.com/ultralytics/CLIP.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
